<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingTop="16dp"
    >
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp">
            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editor_checkbox"
                android:layout_centerVertical="true"
                android:button="@drawable/custom_check_box"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:id="@+id/edit_task_name_field"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences"
                    android:singleLine="true"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/edit_task_priority_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_toEndOf="@+id/editor_checkbox"
                    android:background="@null"
                    android:text="Task name goes here "/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_task_priority_button"
                android:src="@drawable/ic_priority_solid"
                android:paddingStart="8dp"
                android:tint="@color/high_priority_color"
                android:onClick="showPriorityMenu"
                android:background="?selectableItemBackgroundBorderless"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/priority_selector_label" />

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="Sub Tasks"/>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sub_task_recycler_view"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sub_task_recycler_view"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="New SubTask"
                android:gravity="start|center_vertical"
                android:id="@+id/add_sub_task"
                app:icon="@drawable/ic_add"/>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="Time tools"/>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">
                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    app:icon="@drawable/ic_due_date"
                    android:paddingStart="8dp"
                    android:gravity="start|center_vertical"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:text= "@string/set_due_date_label"
                    android:layout_height="wrap_content"
                    android:id="@+id/set_due_button" />
                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    app:icon="@drawable/ic_add_reminder"
                    android:paddingStart="8dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/set_reminder_label"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_height="wrap_content"
                    android:id="@+id/set_reminder_button" />
                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    app:icon="@drawable/ic_repeat"
                    android:paddingStart="8dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/set_repetition_label"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_height="wrap_content"
                    android:id="@+id/set_repetition_button"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="Notes"/>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:minHeight="48dp"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:focusable="false"
                android:background="@null"
                android:text="@string/tab_here_to_add_notes_label"
                android:id="@+id/editor_notes_view"/>
        </com.google.android.material.card.MaterialCardView>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="Created"/>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/created_date_view"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="Sep 21, 2020"/>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>


</LinearLayout>